<?php


namespace Widget;


abstract class Widget extends \Concept\Distinguishable
{
    abstract public function draw();
}